@@ -1,5 +1,5 @@
 [mypy]
-python_version = 3.6
+python_version = 3.7
 no_implicit_optional = True
 
 [mypy-capstone_gt]
