@@ -2,6 +2,7 @@
 - OffsetMapping.__setitem__'s behavior changed when indexing by an element. It
   assigns the passed MutableMapping to the internal storage instead of creating
   a copy, which makes setdefault more intuitive.
+- gtirb-rewriting now requires Python 3.7.
 
 0.1.2:
 - Updated GTIRB symbolic expression attributes.
